--- a/BeerGame/.classpath
+++ b/BeerGame/.classpath
@@ -37,6 +37,12 @@
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/velocity-tools-1.3.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/rd-framework.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/activemq-core-5.2.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jaxb-api-2.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/jaxb-impl-2.0.3.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/geronimo-j2ee-management_1.0_spec-1.0.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/geronimo-jms_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/geronimo-jta_1.0.1B_spec-1.0.1.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/servlet-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/jasper.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/jsp-api.jar"/>
