2009/10/4 井上・森下 現在庫量の表示を行いました。注残は未対応です。

--- a/BeerGame/src/resource/schemaResources.properties
+++ b/BeerGame/src/resource/schemaResources.properties
@@ -17,6 +17,9 @@ ScalableNumber.scale=小数点位置。正の数なら左へ、負の数なら右へ移動させる
 Numbering=ナンバリングテーブル
 Numbering.id=ＩＤ
 Numbering.nextNumber=現在割り当てている番号
+Game=ゲーム
+Game.id=OID
+Game.name=ゲーム名
 Role=ロール
 Role.id=OID
 Role.name=ロール名
@@ -34,8 +37,9 @@ TradeTransaction.roleId=ロールID
 Player=プレイヤー
 Player.id=OID
 Player.name=プレイヤー名
-Player.teamName=チーム名
 Player.isOwner=オーナーの場合はT。他はN
 Player.isOwnerInDB=オーナーの場合はT。他はN
 Player.roleId=ロールID
+Player.gameId=ゲームID
 Player.role=ロール
+Player.game=ゲーム
