--- a/BeerGame/conf/filtering.morishita.properties
+++ b/BeerGame/conf/filtering.morishita.properties
@@ -85,10 +85,10 @@ hibernate.timeout=
 #
 
 #Velocityマクロの文字コード
-velocity.input.encoding=Shift_JIS
+velocity.input.encoding=UTF-8
 
 #Velocityが出力する際の文字コード
-velocity.output.encoding=Shift_JIS
+velocity.output.encoding=UTF-8
 
 #リソースローダーの設定
 #  ファイル取り込み　　　：file
