・スキーマ定義の変更 ・在庫表示のvelocityを修正

--- a/BeerGame/src/resource/schemaResources.properties
+++ b/BeerGame/src/resource/schemaResources.properties
@@ -17,23 +17,17 @@ ScalableNumber.scale=小数点位置。正の数なら左へ、負の数なら右へ移動させる
 Numbering=ナンバリングテーブル
 Numbering.id=ＩＤ
 Numbering.nextNumber=現在割り当てている番号
-Game=ゲーム
-Game.id=OID
-Game.name=ゲーム名
-Role=ロール
-Role.id=OID
-Role.name=ロール名
-Role.cookie=Cookie
 CustmerTransaction=顧客取引
 CustmerTransaction.id=OID
-CustmerTransaction.tradeTransactionId=ロールID
+CustmerTransaction.tradeTransactionId=取引記録ID
 CustmerTransaction.tradeTransaction=取引記録
 TradeTransaction=取引記録
 TradeTransaction.id=OID
-TradeTransaction.transactionId=取引種別
+TradeTransaction.transactionType=取引種別
 TradeTransaction.week=週
 TradeTransaction.amount=数
 TradeTransaction.roleId=ロールID
+TradeTransaction.role=ロール
 Player=プレイヤー
 Player.id=OID
 Player.name=プレイヤー名
@@ -43,3 +37,10 @@ Player.roleId=ロールID
 Player.gameId=ゲームID
 Player.role=ロール
 Player.game=ゲーム
+Role=ロール
+Role.id=OID
+Role.name=ロール名
+Role.cookie=Cookie
+Game=ゲーム
+Game.id=OID
+Game.name=ゲーム名
