詳しくは本日送信のメールを参照。

--- a/BeerGame/src/resource/schemaResources.properties
+++ b/BeerGame/src/resource/schemaResources.properties
@@ -33,14 +33,14 @@ Player.id=OID
 Player.name=プレイヤー名
 Player.isOwner=オーナーの場合はT。他はN
 Player.isOwnerInDB=オーナーの場合はT。他はN
-Player.roleId=ロールID
 Player.gameId=ゲームID
-Player.role=ロール
 Player.game=ゲーム
 Role=ロール
 Role.id=OID
 Role.name=ロール名
 Role.cookie=Cookie
+Role.playerId=プレイヤーID
+Role.player=プレイヤー
 Game=ゲーム
 Game.id=OID
 Game.name=ゲーム名
