--- a/BeerGame/src/resource/messageResource.properties
+++ b/BeerGame/src/resource/messageResource.properties
@@ -5,4 +5,4 @@ errors.duplicate={0}が重複しています。
 errors.relationship.child={0}から参照されているため、削除はできません。
 errors.relationship.parent={0}に対応するレコードが無いため、登録または更新はできません。
 
-errors.teamName.duplicate=チーム名が重複しています。
+errors.invalid.orderamount=発注数は数値を入力してください。
