--- a/BeerGame/src/resource/messageResource.properties
+++ b/BeerGame/src/resource/messageResource.properties
@@ -6,3 +6,4 @@ errors.relationship.child={0}から参照されているため、削除はできません。
 errors.relationship.parent={0}に対応するレコードが無いため、登録または更新はできません。
 
 errors.invalid.orderamount=発注数は数値を入力してください。
+errors.invalid.isorder=他のプレイヤーの発注が完了していません。
