【Done】 ・Issue 28: Task:各項目の入力チェックを行う 　・TradeTransactionのAmountに、マイナス値を入力できないようにしました。 　・チーム名、オーナー名、プレイヤー名にトリムをかけるようにしました。
【Memo】
・makeConfigを実行してください。

--- a/BeerGame/src/resource/messageResource.properties
+++ b/BeerGame/src/resource/messageResource.properties
@@ -7,3 +7,4 @@ errors.relationship.parent={0}に対応するレコードが無いため、登録または更新はでき
 
 errors.invalid.orderamount=発注数は数値を入力してください。
 errors.invalid.isorder=他のプレイヤーの発注が完了していません。
+errors.minus.orderamount=発注数は0以上の整数値を入力してください。
