公開用にJDBCドライバ、Configを追加しました。　今井さん、森下

--- a/BeerGame/.classpath
+++ b/BeerGame/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="lib" path="webapp/WEB-INF/lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="webapp/WEB-INF/lib/postgresql-8.2-505.jdbc3.jar"/>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
