Issue 42:画面対応 【done】 ５．グラフのオートスケール化完了。 　・スケールは上下10％増量中。

--- a/BeerGame/src/resource/schemaResources.properties
+++ b/BeerGame/src/resource/schemaResources.properties
@@ -8,7 +8,7 @@ Unit.name=数量尺度名
 Unit.description=単位説明
 Unit.baseUnitId=ベース数量尺度
 Unit.rate=変換係数
-Unit.scale=変換時に保持する少数精度。負数を指定すると整数の切捨て判断する
+Unit.scale=変換時に保持する小数精度。負数を指定すると整数の切捨て判断する
 Unit.version=楽観的ロッキングキー
 Unit.base=数量尺度
 ScalableNumber=小数点位置指定数値
